--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <a
-      href="itms-services://?action=download-manifest&url=https://drive.google.com/drive/u/1/folders/1pkBI8o7ZSZmDrqsZj-kir7GfoiABbsIa"
+      href="itms-services://?action=download-manifest&url=https://drive.google.com/file/d/1kE9jrygig--VGw66lGUBuIGSOWufFWQs/view?usp=sharing"
       >DeliCharge app install</a
     >
   </body>
